# bankx-23-2

./: .gitignore  PROJECT_OVERVIEW-24-2-2026.md  escalation-mcp-updated.json
banking-platform/: .gitignore
banking-platform/account-agent-a2a/: README.md  test_a2a_agent.py  test_hosted_mcp.py
banking-platform/account-agent-a2a/a2a-agent/: agent_handler.py  config.py  create_agent_in_foundry.py  create_agent_in_foundry_no_tools.py  main.py  pyproject.toml
banking-platform/account-agent-a2a/mcp-server/: .dockerignore  DEPLOYMENT.md  Dockerfile  data_loader_service.py  logging_config.py  main.py  mcp_tools.py  models.py  pyproject.toml  requirements.txt  services.py  start.ps1
banking-platform/account-agent-a2a/prompts/: account_agent.md
banking-platform/account-agent-a2a/testScripts/: test_mcp_server.py
banking-platform/dynamic_data/: README.md
banking-platform/scripts/: init_data.py
claude_bank/: agent_identities_updated.json  bankx-copilot-config.yaml  commands.md  get_complete_agent_info.py  list_all_agents.py  log.txt  requirements.txt
claude_bank/app/common/: state_manager.py
claude_bank/app/copilot/: pyproject.toml
claude_bank/app/frontend/: package-lock.json
claude_bank/app/question-answer/: session_cache-response.json  session_no-thread.json  session_thread_CUST-002.json  session_thread_JKe5S76XGxAolpyrcDIfgLCX.json  session_thread_RefmaHXpVgEzn3mQYI1YSYtV.json  session_thread_dY99J3TeGfWTgp2sSSpiHLgp.json
claude_bank/docs/: COPILOT_STUDIO_DIRECT_CONNECTORS_GUIDE.md
claude_bank/docs/agent-cards/: account-agent-card.json  ai-money-coach-agent-card.json  payment-agent-card.json  prodinfo-faq-agent-card.json  transaction-agent-card.json
claude_bank/dynamic_data/: limits.json  transactions.json
(+83 files in other folders)
